Fix user-widget shadow on mobile view
refs #26607

--- a/pub/static/themes/whitelabel/components/user-widget/_components.user-widget.scss
+++ b/pub/static/themes/whitelabel/components/user-widget/_components.user-widget.scss
@@ -9,6 +9,14 @@ $buttons-base-padding: 0.5em !default;
     .user-dropdown {
         @include dropdown-normal("user-dropdown");
 
+        &:hover {
+            box-shadow: none;
+
+            .user-dropdown__toggle {
+                @include button-shadow-normal-navigational-hover;
+            }
+        }
+
         // keep at minimum width
         &, .user-dropdown__toggle {
             display: inline-flex;
@@ -26,6 +34,10 @@ $buttons-base-padding: 0.5em !default;
             @include media-query(lap-and-up) {
 
             }
+        }
+
+        .user-dropdown__more {
+            @include button-shadow-normal-navigational-hover;
         }
     }
 
